--- a/Editor.html
+++ b/Editor.html
@@ -29,8 +29,8 @@
 
         require(['vs/editor/editor.main'], function () {
             monaco.editor.create(document.getElementById('editor'), {
-                value: `print("Hello world!")`,
-                language: 'lua',
+                value: ``,
+                language: 'javascript',
                 theme: 'vs-dark'
             });
         });
